--- a/app/src/components/cart/cart.module.scss
+++ b/app/src/components/cart/cart.module.scss
@@ -16,6 +16,15 @@
 
 .image {
   align-self: center;
+  width: 100%;
+  max-width: 45%;
+  margin: 0 auto;
+
+  svg {
+    width: 100%;
+    height: auto;
+    display: block;
+  }
 }
 
 .description {
