added cart items;

--- a/app/src/components/cart/cart.module.scss
+++ b/app/src/components/cart/cart.module.scss
@@ -5,6 +5,7 @@
   flex-direction: column;
   gap: 25px;
   background-color: $color-surface;
+  padding: 25px;
 
   @media (min-width: $tablet) {
     align-self: start;
