--- a/app/src/app.scss
+++ b/app/src/app.scss
@@ -3,6 +3,7 @@
 h1,
 h2,
 h3,
+h4,
 button {
   all: unset;
 }
@@ -31,12 +32,25 @@ body {
 h1 {
   font-weight: 800;
   font-size: 42px;
+  color: $color-text-primary;
 }
 
 h2 {
   font-weight: 800;
   font-size: 28px;
   color: $color-primary;
+}
+
+h3 {
+  font-weight: 600;
+  font-size: 18px;
+  color: $color-text-primary;
+}
+
+h4 {
+  font-weight: 600;
+  font-size: 16px;
+  color: $color-text-primary;
 }
 
 button {
