--- a/app/src/components/cart/cart.module.scss
+++ b/app/src/components/cart/cart.module.scss
@@ -38,3 +38,45 @@
 .mobileHidden {
   display: none;
 }
+
+.totalLayout {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.totalTitle {
+  font-size: 16px;
+  color: $color-text-secondary;
+}
+
+.totalPrice {
+  font-size: 24px;
+  font-weight: 800;
+  color: $color-text-primary;
+}
+
+.carbon {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+  color: $color-text-primary;
+  background-color: $color-background;
+  border-radius: 12px;
+  @include shadow;
+}
+
+.confirmButton {
+  padding: 15px;
+  @include button(
+    $color-surface,
+    $color-surface,
+    $color-primary,
+    $color-primary-hover,
+    $color-primary,
+    $color-primary-hover
+  );
+
+  font-size: 16px;
+}
